# DataScience_CemfiMaster

./: README.md  pyproject.toml
Session2/: 2_1_Scraping_Intro.ipynb  2_2_BIS_Scraper_I.ipynb  2_2_BIS_Scraper_II.ipynb  2_3_BIS_Scraper_II.ipynb  2_4_Forecasting_Professions.ipynb  Extra_BCU_Scraper.ipynb
