[project]
name = "datascience-cemfimaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "ipykernel (>=6.30.1,<7.0.0)",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "selenium>=4.38.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "transformers>=4.57.1",
    "groq>=0.33.0",
    "bertviz>=1.4.1",
    "beautifulsoup4>=4.14.2",
    "datasets>=4.3.0",
    "accelerate>=1.11.0",
    "peft>=0.17.1",
    "torch>=2.9.0",
    "tf-keras>=2.20.1",
]
